Hand Generation functions working correctly
-2 bug is gone. Was due to a typo in Majenerator's generateMeld
function.